# CompileTimeKatas

./: .gitignore  CMakeLists.txt  README.md
include/fizzbuzz/: fizzbuzz.hpp
include/util/: print_tuples.hpp  strlit.hpp
src/: main.cpp
